<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.musicaflight.hourglass.EditHourglassActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:title="@string/new_hourglass"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/hourglass_basic_prefs"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#1EFFFFFF"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:text="@string/units_to_show_header"
                    android:textColor="#919191"
                    android:textSize="14sp"/>

                <Switch
                    android:id="@+id/show_years"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_item_height_material"

                    android:checked="true"
                    android:gravity="center_vertical"
                    android:text="@string/show_years"
                    android:textSize="16sp"/>

                <Switch
                    android:id="@+id/show_days"

                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_item_height_material"
                    android:checked="true"
                    android:gravity="center_vertical"
                    android:text="@string/show_days"
                    android:textSize="16sp"/>

                <Switch
                    android:id="@+id/show_hours"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_item_height_material"
                    android:checked="true"
                    android:gravity="center_vertical"
                    android:text="@string/show_hours"
                    android:textSize="16sp"/>

                <Switch
                    android:id="@+id/show_minutes"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_item_height_material"
                    android:checked="true"
                    android:gravity="center_vertical"
                    android:text="@string/show_minutes"
                    android:textSize="16sp"/>

                <Switch
                    android:id="@+id/show_seconds"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_item_height_material"
                    android:checked="true"
                    android:gravity="center_vertical"
                    android:text="@string/show_seconds"
                    android:textSize="16sp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/list_item_height_material">

                    <TextView
                        style="?android:attr/textAppearanceListItem"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:gravity="center_vertical"
                        android:text="@string/decimal_places"
                        />

                    <ImageButton
                        android:id="@+id/plus"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/add_decimal_place"
                        android:gravity="center_vertical"
                        android:onClick="increaseDecimalPlaces"
                        android:src="@drawable/ic_add_white_24dp"/>

                    <TextView
                        android:id="@+id/decimal_places"
                        style="?android:attr/textAppearanceListItem"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toStartOf="@id/plus"
                        android:gravity="center_vertical"/>



                    <ImageButton
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toStartOf="@id/decimal_places"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/subtract_decimal_place"
                        android:gravity="center_vertical"
                        android:onClick="decreaseDecimalPlaces"
                        android:src="@drawable/ic_subtract_white_24dp"/>
                </RelativeLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="#1EFFFFFF"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_background"
                android:onClick="changeBackground"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="send notification"
                android:onClick="sendNotification"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
